--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+- Breaking changes: the `getResponse()` function from 
+  `\WindowsAzure\Common\Internal\Http\IHttpClient` is replaced by `sendAndGetResponse()`.
 - Switch to PHP 5.6.
 
 Windows Azure SDK For PHP 0.4.5, 2016-09-26
