--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,9 @@
-- Breaking changes:
+- Breaking changes
+  - [Type declarations](http://php.net/manual/en/functions.arguments.php#functions.arguments.type-declaration) for
+    `\WindowsAzure\Common\Internal\IServiceFilter` and `\WindowsAzure\Common\Internal\Http\HttpClient`.
   - src/WindowsAzure.php has been removed,
   - src/Common/InternalFilter/RetryPolicyFilter.php has been removed.
-- Breaking changes: the `getResponse()` function from
-  `\WindowsAzure\Common\Internal\Http\IHttpClient` is replaced by `sendAndGetResponse()`.
+  - the `getResponse()` function from `\WindowsAzure\Common\Internal\Http\IHttpClient` is replaced by `sendAndGetResponse()`.
 - Switch to PHP 5.6.
 
 Windows Azure SDK For PHP 0.4.5, 2016-09-26
