--- a/changelog.txt
+++ b/changelog.txt
@@ -5,7 +5,8 @@
 	- `\WindowsAzure\Common\Internal\RestProxy`,
 	- `\WindowsAzure\Common\Internal\ServiceRestProxy`,
 	- `\WindwosAzure\Common\Internal\FilterableService`,	
-	- `\WindowsAzure\MediaServices\MediaServicesRestProxy`.
+	- `\WindowsAzure\MediaServices\MediaServicesRestProxy`,
+	- `\WindowsAzure\MediaServices\IMediaServices`.
   - src/WindowsAzure.php has been removed,
   - src/Common/InternalFilter/RetryPolicyFilter.php has been removed.
   - the `getResponse()` function from `\WindowsAzure\Common\Internal\Http\IHttpClient` is replaced by `sendAndGetResponse()`.
