--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
   - [Type declarations](http://php.net/manual/en/functions.arguments.php#functions.arguments.type-declaration) for
     - `\WindowsAzure\Common\Internal\IServiceFilter`, 
 	- `\WindowsAzure\Common\Internal\Http\HttpClient`,
+	- `\WindowsAzure\Common\Internal\Http\HttpCallContext`,
 	- `\WindowsAzure\Common\Internal\Http\BatchRequest`,
 	- `\WindowsAzure\Common\Internal\Http\BatchResponse`,
 	- `\WindowsAzure\Common\Internal\RestProxy`,
