--- a/changelog.txt
+++ b/changelog.txt
@@ -1,15 +1,7 @@
 - Breaking changes
-    - [Type declarations](http://php.net/manual/en/functions.arguments.php#functions.arguments.type-declaration) for
-        - `\WindowsAzure\Common\Internal\IServiceFilter`, 
-        - `\WindowsAzure\Common\Internal\Http\HttpClient`,
-        - `\WindowsAzure\Common\Internal\Http\HttpCallContext`,
-        - `\WindowsAzure\Common\Internal\Http\BatchRequest`,
-        - `\WindowsAzure\Common\Internal\Http\BatchResponse`,
-        - `\WindowsAzure\Common\Internal\RestProxy`,
-        - `\WindowsAzure\Common\Internal\ServiceRestProxy`,
-        - `\WindwosAzure\Common\Internal\FilterableService`,	
-        - `\WindowsAzure\MediaServices\MediaServicesRestProxy`,
-        - `\WindowsAzure\MediaServices\IMediaServices`.
+    - [Type declarations](http://php.net/manual/en/functions.arguments.php#functions.arguments.type-declaration)
+    - WindowsAzure\MediaServices\Models\AssetDeliveryPolicyConfigurationKey
+        - stringifyAssetDeliveryPolicyConfiguartionKey() => stringifyAssetDeliveryPolicyConfigurationKey()
     - src/WindowsAzure.php has been removed,
     - src/Common/InternalFilter/RetryPolicyFilter.php has been removed.
     - the `getResponse()` function from `\WindowsAzure\Common\Internal\Http\IHttpClient` is replaced by `sendAndGetResponse()`.
