--- a/changelog.txt
+++ b/changelog.txt
@@ -4,7 +4,12 @@
         - stringifyAssetDeliveryPolicyConfiguartionKey() => stringifyAssetDeliveryPolicyConfigurationKey()
     - src/WindowsAzure.php has been removed,
     - src/Common/InternalFilter/RetryPolicyFilter.php has been removed.
-    - the `getResponse()` function from `\WindowsAzure\Common\Internal\Http\IHttpClient` is replaced by `sendAndGetResponse()`.
+    - the `getResponse()` function from `\WindowsAzure\Common\Internal\Http\IHttpClient` is replaced by
+      `sendAndGetResponse()`.
+    - the `getContexts()` function from `\WindowsAzure\Common\Internal\Http\BatchResponse` is replaced by
+      `getResponses()`.
+    - the `sendContext()` function from `\WindowsAzure\Common\Internal\RestProxy` is replaced by `sendHttpContext()`.
+    - the `send()` function from `\WindowsAzure\MediaServices\MediaServicesRestProxy` is replaced by `sendHttp()`.
 - Switch to PHP 5.6.
 
 Windows Azure SDK For PHP 0.4.5, 2016-09-26
