--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+- [Azure Storage SDK](https://packagist.org/packages/microsoft/azure-storage) is updated to the 0.13 version.
+
+Windows Azure SDK For PHP 0.5.0, 2016-10-31
+-------------------------------------------
 - Breaking changes
     - [Type declarations](http://php.net/manual/en/functions.arguments.php#functions.arguments.type-declaration)
     - WindowsAzure\MediaServices\Models\AssetDeliveryPolicyConfigurationKey
