Azure Storage SDK is updated to the 0.13 version. (#921)
* Azure Storage SDK is updated to the 0.13 version.

* Azure Storage SDK is updated to the 0.13 version.

* Minor change in readme.md

* Remove out-of-date dependency. See composer.json for a list of dependencies.

* Minor changes in documentation.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+Windows Azure SDK For PHP 0.5.1, 2017-03-20
+-------------------------------------------
+
+- [Azure Storage SDK](https://packagist.org/packages/microsoft/azure-storage) is updated to the 0.13 version.
+
 Windows Azure SDK For PHP 0.5.0, 2016-10-31
 -------------------------------------------
 
