--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
-Windows Azure SDK For PHP 0.5.3, 2017-08-07
+Windows Azure SDK For PHP 0.5.5, 2017-08-29
+
+- [Azure Storage SDK](https://packagist.org/packages/microsoft/azure-storage) is updated to the 0.18.0 version.
+
+Windows Azure SDK For PHP 0.5.4, 2017-08-07
 
 - [Azure Storage SDK](https://packagist.org/packages/microsoft/azure-storage) is updated to the 0.17.0 version.
 
