--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+Windows Azure SDK For PHP 0.5.7, 2017-11-27
+
+- SAS authorization
+- AD support for Media Services
+
 Windows Azure SDK For PHP 0.5.6, 2017-09-22
 
 - [Azure Storage SDK](https://packagist.org/packages/microsoft/azure-storage) is updated to the 0.19.1 version.
